# bayes_toolbox

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  codecov.yml  readme.md
doc/: index.md
examples/: coin_toss_model.cpp  coin_tosses_beta_model.cpp  coin_tosses_beta_model_suff_stat.cpp  coin_tosses_model.cpp  example_1_1.cpp  example_1_1b.cpp  flat_gamma_poisson_model.cpp  gamma_poisson_model.cpp  prodpoi.cpp  unif_bern.cpp
src/: Proxy.hpp  array_utils.hpp  arrays.hpp  backup.hpp  basic_moves.hpp  bayes_toolbox.hpp  config.hpp  datatypes.hpp  distrib_draw.hpp  distrib_types.hpp  distrib_utils.hpp  draw.hpp  experimental_test.cpp  exponential.hpp  gamma.hpp  index.hpp  logprob.hpp  logprobs.hpp  math_utils.hpp  mcmc_utils.hpp  model.hpp  model_example.cpp  model_test.cpp  new_test.cpp  node.hpp  node_types.hpp  overloading.hpp  param_types.hpp  params.hpp  poisson.hpp  random.hpp  raw_value.hpp  ref_types.hpp  reference.hpp  set_value.hpp  struct_utils.hpp  suffstat_utils.hpp  tagged_tuple.hpp  tags.hpp  test.cpp  (+4 more)
src/detfunctions/: custom_dnode.hpp  exponential.hpp  product.hpp  scalar_product.hpp
src/distributions/: bernoulli.hpp  beta.hpp  categorical.hpp  dirichlet.hpp  exponential.hpp  gamma.hpp  normal.hpp  poisson.hpp  uniform.hpp
src/moves/: flat_mh.hpp  gibbs.hpp  mh.hpp  proposals.hpp  sweet_mh.hpp
src/operations/: across_model_nodes.hpp  across_nodes.hpp  across_values.hpp  across_values_params.hpp  backup.hpp  draw.hpp  element_vpv.hpp  element_vv.hpp  flat_backup.hpp  flat_draw.hpp  flat_gather.hpp  flat_logprob.hpp  gather.hpp  get_value.hpp  logprob.hpp  raw_value.hpp  row_vpv.hpp  row_vv.hpp  set_value.hpp  view.hpp
src/structure/: Ref.hpp  ValueParamView.hpp  ValueView.hpp  View.hpp  array_utils.hpp  distrib_utils.hpp  dnode.hpp  index.hpp  introspection.hpp  model.hpp  new_view.hpp  node.hpp  params.hpp  reference.hpp  suffstat.hpp  tags.hpp  tree_process_node.hpp  type_tag.hpp  view.hpp  visitor.hpp
src/tree/: implem.hpp  interface.hpp
src/utils/: math_utils.hpp  random.hpp
